# rust-protobufjs

./: Cargo.toml
protos/: descriptors.json  one.proto  two.proto
src/: README.md  comment.rs  enum.rs  fake_serializer.rs  field.rs  file_parser.rs  http_options.rs  import.rs  into_path.rs  iter_ext.rs  iterator_with_position.rs  lib.rs  main.rs  message.rs  metadata.rs  namespace.rs  oneof.rs  parse_error.rs  parser.rs  position.rs  scalar.rs  service.rs  test_file.proto  token.rs  tokenizer.rs  ts_serializer.rs  type.rs
src/service_map/: mod.rs
src/typescript/: constants.rs  mod.rs  serializer.rs
