[package]
name = "protobuf"
version = "0.1.0"
authors = ["Pierre Guillaume Herveou <pgherveou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
dirs = "3.0.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
glob = "0.3.0"
backtrace = "0.3"
derive_more = { version = "0.99.0",  default-features = false, features =["display"] }
phf = { version = "0.7.24", features = ["macros"] }


