[package]
name = "protobuf"
version = "0.1.0"
authors = ["Pierre Guillaume Herveou <pgherveou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
convert_case = "0.4.0"
regex = "1.5.4"
lazy_static = "1.4.0"
dirs = "3.0.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
glob = "0.3.0"
linked-hash-map = {version = "0.5.4", features = ["serde_impl"]}
derive_more = { version = "0.99.0",  default-features = false, features =["display"] }
phf = { version = "0.7.24", features = ["macros"] }
indoc = "1.0.3"

